--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eslint:check": "eslint --ext .js -c .eslintrc.json",
     "prettier:check": "prettier --config .prettierrc.json --check",
     "prettier:write": "prettier --write",
+    "script:version": "scripts/version.js",
     "prepare": "husky install"
   },
   "repository": {
@@ -18,7 +19,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/geotrev/dark-hole/issues"
   },
@@ -38,7 +39,9 @@
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^7.0.4",
     "lint-staged": "^12.5.0",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "semver": "^7.5.4",
+    "yargs": "^17.7.2"
   },
   "lint-staged": {
     "src/**/*.{js,scss,css}": [
