--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@babel/core": "^7.23.3",
     "@rollup/plugin-terser": "^0.4.4",
+    "execa": "^8.0.1",
     "rollup": "^2.79.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-userscript-metablock": "^0.3.3"
